fix: align image to the right within the body

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 body{
     font-family: Verdana;
     font-size: 2em;
+    MyImg{
+        align-self: right;
+    }
 }
